# monitor-drift

./: .gitignore  LICENSE  NEXT.md  README.md  RESULTS.md  pyproject.toml
deploy/: app.py  download.py
preprint/: compile.sh  main.tex  references.bib
preprint/figure_scripts/: _style.py  figure1_hero.py  figure2_multi_method.py  figure3_dose_response.py  figure4_ablation.py  figure5_ablation_trajectory.py
results/data/: training_problem_ids.json
results/feasibility/: generations.jsonl
results/paper/: ablation_control_ci.json  ablation_directions.npz  ablation_directions_noscaler.npz  ci_and_permutation.json  direction_comparison.json  multi_method_directions.json
results/paper/raw/: ablation_cc_r0.json  ablation_cc_r2.json  ablation_cc_r4.json  ablation_cc_r4_noscaler.json  alpha_r2_a10.json  alpha_r2_a2.json  alpha_r2_a5.json  alpha_r2_a7.json  alpha_r4_a10.json  alpha_r4_a2.json  alpha_r4_a7.json  fresh_base.json  fresh_cosine.json  fresh_r0.json  fresh_r2.json  fresh_r4.json  probes_cc_results.json  problems_sha256.txt  random_direction_control_r4.json  rerun_r4_a5.json  steering_cc_trajectory.json  strategy_step_0.json  strategy_step_1.json  (+5 more)
scripts/: bootstrap_cis.py  compute_multi_method_directions.py  fetch_raw_artifacts.py  make_figures.py  reproduce_key_numbers.py  validate_probe.py
src/: codecontests_env.py  controls.py  extract.py  feasibility.py  probe.py  registry.py  stats.py  steer.py  train_ppo.py  types.py
tests/: conftest.py  test_controls.py  test_extract.py  test_feasibility.py  test_probe.py  test_reproduction.py  test_stats.py
(+19 files in other folders)
