[project]
name = "monitor-drift"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.0",
    "modal>=1.4.0",
    "datasets>=3.0.0",
]

[project.optional-dependencies]
train = [
    "torch>=2.3.0",
    "transformers>=4.46.0",
    "trl>=1.0.0",
    "peft>=0.14.0",
    "bitsandbytes>=0.45.0",
    "vllm>=0.6.0",
    "accelerate>=1.0.0",
    "deepspeed>=0.16.0",
    "liger-kernel>=0.5.0",
]
extract = [
    "nnsight>=0.4.0",
    "torch>=2.3.0",
    "transformers>=4.46.0",
    "peft>=0.14.0",
    "accelerate>=1.0.0",
]
analysis = [
    "scikit-learn>=1.5.0",
    "torch>=2.3.0",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
